Remove min width, fix column content overflow

--- a/src/app/components/column/column.component.scss
+++ b/src/app/components/column/column.component.scss
@@ -5,7 +5,7 @@
 
   height: 100%;
   margin: 0.5rem;
-  min-width: 160px;
+  min-width: 10rem;
 
   .issue-card {
     width: 100%;
