--- a/src/styles/components/_drop-list.scss
+++ b/src/styles/components/_drop-list.scss
@@ -6,6 +6,5 @@
   border: dashed 2px #ccc;
   background: white;
   border-radius: 4px;
-  min-height: 110px;
   overflow: hidden;
 }
